# Modeling-course

Client/: .gitignore  index.html  package.json
Client/src/: About.vue  App.vue  HeaderBar.vue  LinePlot.vue  NotFound.vue  StickyFooter.vue  Task1.vue  Task2.vue  Task3.vue  main.js
Server/: Server.cabal  stack.yaml
Server/src/Task1/: Task1.hs
Server/src/Task3/: Math.hs  Task3.hs
Server/src/Task4/: Basic.hs  Collocation.hs  Task.hs
