name:                Server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, scotty, text, http-types, containers, boxes, aeson, bytestring, vector, mtl, diagrams-solve
  other-modules:       Formatter, Task1.Task1, Task2.Task2, Task2.Data, Task2.Math, Task3.Task3, Task3.Math
  ghc-options:         -O2
